# OpenCL-tests

./: CMakeLists.txt  Readme.md  check_gpu.cpp  vector_addition.cpp
